--- a/IceFishing/Supporting Files/Info.plist
+++ b/IceFishing/Supporting Files/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.cuappdev.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.cuappdev.IceFishing</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -40,6 +40,19 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1618111635067060</string>
+	<key>FacebookDisplayName</key>
+	<string>IceFishing</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1618111635067060</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
